gccida/g1/force_const_mem
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4240:23: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  force_const_mem( machine_mode mode, rtx x) 
                      ^
                      enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4242:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v2; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4248:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4249:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4260:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v20; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4295:19: error: invalid suffix 'xmode' on integer constant
mode = *(short *)0xmode; 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4324:43: error: use of undeclared identifier 'a'
sprintf( label, "*.%s%u", ( const char *)&a.dw_attr_val, v13); 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/varasm.c:4327:36: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v17); 
                                   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_const_mem/src/obj/varasm.o] Error 1
